# expense-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: .pnp.cjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  index.css  main.tsx
apps/web/src/components/: Guard.tsx
apps/web/src/lib/: api.ts  auth.ts
apps/web/src/routes/: ChatBindConfirm.tsx  Dashboard.tsx  Register.tsx  SignIn.tsx
docs/: README.md  auth.md  ci.md
lang/: id.json
migrations/: 20250907132444_init.down.sql  20250907132444_init.up.sql  20250921080112_add_subscriptions.down.sql  20250921080112_add_subscriptions.up.sql  20250927120000_merge_category_alias.down.sql  20250927120000_merge_category_alias.up.sql  20250928191600_move_start_over_date.down.sql  20250928191600_move_start_over_date.up.sql
seeds/: budgets.json  categories.json  categories_aliases.json  chat_bind_requests.json  chat_bindings.json  expense_entries.json  expense_groups.json  group_members.json  subscriptions.json  user_usage.json  users.json
src/: app.rs  auth.rs  commands.rs  config.rs  db.rs  error.rs  lang.rs  lib.rs  main.rs  messengers.rs  middleware.rs  openapi.rs  reports.rs  repos.rs  routes.rs  telegram_logger.rs  types.rs  utils.rs
src/auth/: group_guard.rs
src/commands/: base.rs  budget.rs  budget_edit.rs  category.rs  category_edit.rs  expense.rs  expense_edit.rs  help.rs  history.rs  report.rs
src/error/: app.rs  db.rs
src/messengers/: telegram.rs
src/middleware/: tier.rs
src/reports/: monthly_report.rs  scheduler.rs
src/repos/: base.rs  budget.rs  category.rs  category_alias.rs  chat_bind_request.rs  chat_binding.rs  expense_entry.rs  expense_group.rs  expense_group_member.rs  subscription.rs  user.rs
src/routes/: budgets.rs  categories.rs  categories_aliases.rs  chat_bind_requests.rs  chat_bindings.rs  expense_entry.rs  expense_groups.rs  group_members.rs  health.rs  users.rs  version.rs
src/utils/: parse_price.rs
tests/: repos_tests.rs  routes_categories_tests.rs  routes_expense_groups_tests.rs  routes_users_tests.rs
