[package]
name = "expense-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = "0.8.4"
chrono = { version = "0.4.41", features=["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "chrono", "uuid"] }
thiserror = "2.0.16"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6.6", features=["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.8", features = ["v7", "v4", "serde", "std"] }
jsonwebtoken = "9.3.0"
hmac = "0.12.1"
sha2 = "0.10.8"
http-body-util = "0.1.2"
hex = "0.4.3"
